# ELABORATO2023

./: .gitignore  CMakeLists.txt  Observer.h  Product.h  ProductList.cpp  ProductList.h  Subject.h  User.cpp  User.h  productList.cpp  productList.h
test/: CMakeLists.txt  ProductListFixture.cpp  ProductTests.cpp  RunAllTests.cpp  UserFixture.cpp
